--- a/style.css
+++ b/style.css
@@ -7,6 +7,29 @@ body{
     background-color: #fff;
 }
 
+h1 {
+    left: 20px;
+    font-size: 110%;
+    padding-top: 13px;
+}
+ul{
+    list-style: none;
+}
+
+.signIn{
+    border: 1px solid black;
+    width: 60px;
+    padding: 10px;
+    margin: 0px;
+}
+
+.signInForm{
+    padding: 5px;
+    width: 80px;
+    height: 50px;
+    float:right;
+}
+
 .buttonStyle {
     border-radius: 4px;
     border: thin solid #000000;
@@ -22,32 +45,50 @@ body{
 }
 
 .buttonStyle:active{
-    background-color: #ff4d4d;
+    background-color: #cfebfd;
 }
 
-#header {
+.buttonSignStyle {
+    border-radius: 3px;
+    border: thin solid #353535;
+    padding: 5px;
+    background-color: #C0C0C1;
+    font-weight: bold;
+    color: #353535;
+    width: 80px;
+    height: 50px;
+    float:right;
+}
+
+.buttonSignStyle:hover {
+    cursor: pointer;
+}
+
+.buttonSignStyle:active{
+    background-color: #cfebfd;
+}
+
+.header {
     float:left;
-    height: 150px;
+    height: 100px;
     width: 100%;
-    background-color: #909090;
-}
-
-h1 {
-    left: 20px;
-    font-size: 110%;
-    padding-top: 13px;
-}
-ul{
-    list-style: none;
+    background-color: #C0C0C1;
 }
 
 #loginform{
-    position:absolute;
-    height:200px;
-    width:200px;
-    left:50%;
-    top:50%;
-    margin-top:100px;
-    margin-left: 100px;
+    border-radius: 3px;
+    border: thin solid #353535;
+    background-color: #C0C0C1;
+    font-weight: bold;
+    color: #353535;
+
+    position: absolute;
+    width: 300px;
+    height: 120px;
+    z-index: 15;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -150px;
+    padding-top: 50px;
     
 }
