--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ ul{
     list-style: none;
 }
 
-
 .profileFormCourses{
     padding: 5px;
     width: 80px;
@@ -53,6 +52,10 @@ ul{
     font-weight: bold;
     color: #000000;
     width: 75px;
+    display :flex;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 10px;
 }
 
 .loginButtonIndex:hover{
@@ -86,7 +89,7 @@ ul{
 
 .header{
     float: left;
-    height: 100px;
+    height: 120px;
     width: 100%;
     background-color: #C0C0C1;
 }
@@ -128,6 +131,8 @@ ul{
 }
 
 .logo{
+    margin-top: 10px;
+    margin-left: 10px;
     float: left;
 }
 
@@ -135,18 +140,47 @@ ul{
     font-size: 20px;
 }
 
+.signIn{
+    margin: 5px, 0px, 8px;
+    font-size: 146%;
+}
+.mainAction{
+    padding: 5px 20px 5px 20px;
+    main-height: 150px;
+    margin-bottom: 1.75em;
+
+}
+
+#username{
+    display :flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+#password{
+    display :flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+#bottomPad{
+    padding-left: 20px;
+    padding-bottom: 30px;
+}
+
 #loginFormIndex{
     border-radius: 3px;
     border: thin solid #353535;
+    box-shadow: 0 3px 12px #5C666B;
     background-color: #C0C0C1;
     font-weight: bold;
     color: #353535;
     position: absolute;
     width: 300px;
-    height: 120px;
+    height: 150px;
     z-index: 15;
     top: 50%;
     left: 50%;
     margin: -100px 0 0 -150px;
-    padding-top: 50px;
+    padding-top: 10px;
 }
